hass/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hass
  template:
    metadata:
      labels:
        app: hass
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: hass
        image: ghcr.io/home-assistant/home-assistant:2025.7
        imagePullPolicy: Always
        volumeMounts:
        - name: config
          mountPath: /config
        - name: config-map
          mountPath: /config-map
        - name: ssh-key
          mountPath: /root/.ssh/
          readOnly: true
      volumes:
      - name: config-map
        configMap:
          name: hass
      - name: config
        persistentVolumeClaim:
          claimName: hass-config
      - name: ssh-key
        secret:
          secretName: hass-ssh-key
          defaultMode: 0400
          items:
          - key: ssh-privatekey
            path: id_ed25519
