hass/mysql-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass-mysql
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: hass-mysql
  template:
    metadata:
      labels:
        app: hass-mysql
    spec:
      containers:
        - name: mysql
          image: mariadb:11.1
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: hass-mysql
      volumes:
        - name: hass-mysql
          persistentVolumeClaim:
            claimName: hass-mysql
