hass/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hass-mysql
  name: hass-mysql
spec:
  selector:
    app: hass-mysql
  ports:
  - name: hass-mysql
    protocol: TCP
    port: 3306
