hass/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hass
  name: hass
spec:
  selector:
    app.kubernetes.io/name: hass
    app.kubernetes.io/instance: hass
  ports:
  - name: hass
    protocol: TCP
    port: 8123
